[tool.ruff]
line-length = 140

[tool.black]
line-length = 140

[tool.poetry]
name = "pytainer"
version = "1.0.0"
include = ["pytainer/py.typed"]
description = "Python's dependable dependency injection container for managing lifecycles and registrations."
authors = ["Anastases Giannikopoulos <a.giannikopoulos@ai2cyber.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
black = "^23.7.0"
pyright = "^1.1.329"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
